methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not enough arguments for method growFlowers: (C: java.awt.Color)Unit.
Unspecified value parameter C.
	    growFlowers();
                       ^FlowerPot:3: error: value rouge is not a member of object java.awt.Color
  growFlowers(Color.rouge)
                    ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^